# fast-focus

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
